--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^4.0.26",
+    "@quasar/extras": "^1.13.6",
     "@vueuse/core": "^8.4.2",
     "@web-auth/webauthn-helper": "^0.0.13",
     "axios": "^0.27.1",
+    "bootstrap": "^5.1.3",
     "element-plus": "^2.2.0",
     "feather-icons": "^4.29.0",
     "perfect-scrollbar": "^1.5.5",
+    "quasar": "^2.6.6",
     "register-service-worker": "^1.7.2",
     "sass": "^1.51.0",
     "vue": "^3.2.25",
