--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@fancyapps/ui": "^4.0.26",
     "@quasar/extras": "^1.13.6",
+    "@tinymce/tinymce-vue": "^5.0.0",
     "@vueuse/core": "^8.4.2",
     "@web-auth/webauthn-helper": "^0.0.13",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "codemirror": "^5.65.5",
+    "codemirror-editor-vue3": "^2.1.4",
     "element-plus": "^2.2.0",
     "feather-icons": "^4.29.0",
     "perfect-scrollbar": "^1.5.5",
